--- a/src/shared/forms/form-input/form-input.component.html
+++ b/src/shared/forms/form-input/form-input.component.html
@@ -1,8 +1,9 @@
-<div class="form-group">
-    <label *ngIf="showLabel" [for]="fieldId" class="d-none d-sm-block col-form-label col-form-label-sm p-0" >
+<div class="form-group" [class]="col?'':'row'">
+    <label *ngIf="showLabel" [for]="fieldId" class="d-none d-sm-block col-form-label col-form-label-sm"
+        [class]="col?'p-0':'col-sm-3'">
         {{label}}<span *ngIf="validator?.required">*</span>
     </label>
-    <div>
+    <div [class]="col?'':'col-sm-9'">
         <input [type]="type" class="form-control form-control-sm" [id]="fieldId" [formControl]="control"
             autocomplete="off" [placeholder]="label" [maxlength]="maxlength" [readonly]="readonly"
             (change)="onValueChange($event)">
