--- a/src/dashboard/products/containers/products/products.component.html
+++ b/src/dashboard/products/containers/products/products.component.html
@@ -2,22 +2,14 @@
     <h3>Products</h3>
 </div>
 
+<!-- Toast service will display here -->
 <app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
+
 <div class="container-fluid">
     <loading *ngIf="loading"></loading>
-    <div class="alert alert-success alert-dismissible show" role="alert" *ngIf="message.length > 0">
-        <strong>Success! </strong> {{ message }}
-        <button type="button" class="close" (click)="onClose()">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="alert alert-danger alert-dismissible show" role="alert" *ngIf="errorMessage.length > 0">
-        <strong>Failed! </strong> {{ errorMessage }}
-        <button type="button" class="close" (click)="onClose()">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-
+    <alert-messages [message]="message" [type]="'success'" (close)="onClose()"></alert-messages>
+    <alert-messages [message]="errorMessage" [type]="'danger'" (close)="onClose()"></alert-messages>
+    
     <div class="row" *ngIf="!loading">
 
         <div [ngClass]="(product || showProductForm)?'col-md-6':''" class="col-12 pr-0">
