--- a/src/dashboard/settings/containers/categories/categories.component.html
+++ b/src/dashboard/settings/containers/categories/categories.component.html
@@ -1,1 +1,20 @@
-<p>categories works!</p>
+<div class="container-fluid component-head">
+    <h3>Categories</h3>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+            <category-table [categoryPage]="categoryPage" [imageUrl]="imageUrl" (edit)="onEdit($event)"
+                (refresh)="refreshData($event)">
+            </category-table>
+        </div>
+        <div class="col-md-6">
+            <div class=" border rounded">
+                <category-form [item]="category" [err]="errorMessage" (create)="onCreate($event)"
+                    (update)="onUpdate($event)" (delete)="onDelete($event)">
+                </category-form>
+            </div>
+        </div>
+    </div>
+</div>
