--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,8 +49,9 @@ td.form-head,
   }
 }
 .table_image {
-  height: 60px;
   width: auto;
+  max-height: 60px;
+  max-width: 150px;
   // border: 1px solid gray;
 }
 
