--- a/src/dashboard/settings/containers/sub-sub-categories/sub-sub-categories.component.html
+++ b/src/dashboard/settings/containers/sub-sub-categories/sub-sub-categories.component.html
@@ -1,1 +1,22 @@
-<p>sub-sub-categories works!</p>
+<div class="container-fluid component-head">
+    <h3>Sub Sub Categories</h3>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+            <sub-sub-category-table [subSubCategoryPage]="subSubCategoryPage" [imageUrl]="imageUrl"
+                (edit)="onEdit($event)" (refresh)="refreshData($event)">
+            </sub-sub-category-table>
+        </div>
+        <div class="col-md-6">
+            <div class=" border rounded">
+                <sub-sub-category-form [item]="subSubCategory" [categories]="categoryPage?.docs"
+                    [subCategories]="subCategoryPage?.docs" [err]="errorMessage" (create)="onCreate($event)"
+                    (update)="onUpdate($event)" (delete)="onDelete($event)"
+                    (selectCategory)="handleCateogySelect($event)">
+                </sub-sub-category-form>
+            </div>
+        </div>
+    </div>
+</div>
