--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -6,4 +6,4 @@ $accent-color: #fcd304;
 $web-color:#951b81;
 $primary-text-color: #212121;
 $secondary-text-color: #757575;
-$divider-color: #bdbdbd;
+$divider-color:  #e8e9ea;
