--- a/src/shared/components/product2/product2.component.html
+++ b/src/shared/components/product2/product2.component.html
@@ -7,7 +7,7 @@
         <div class="detail-card-info-size">{{product.size}}</div>
         <div class="detail-card-info-price">
             <ins><span>৳{{product.price}}</span></ins>
-            <del *ngIf="product.old_price > 0"><span>৳{{product.old_price}}</span></del>
+            <del *ngIf="product.mrp > 0"><span>৳{{product.mrp}}</span></del>
         </div>
     </div>
     <div class="detail-card-buttons border-top">
