--- a/src/dashboard/products/containers/products/products.component.html
+++ b/src/dashboard/products/containers/products/products.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-8">
             <product-table [productPage]="productPage" [thumbUrl]="thumbUrl" (edit)="onEdit($event)"
-                (refresh)="refreshData($event)">
+                (refresh)="refreshData($event)" (active)="onToogleActive($event)">
             </product-table>
         </div>
     </div>
